--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,7 @@ body {
   position: absolute;
   width: 30px;
   height: 30px;
+  border: 1px solid #eee;
   border-radius: 50%;
   background: #fcc600;
   display: flex;
